# OntologiaComputazionale

./: .gitignore  AnimalFarm.html  KG_from_txt.py  README.md  demo.py  find_similar_books.py  generate_heatmaps.py  inference_pooling.py  main.py  node_mapping.json  optuna_pretraining.py  optuna_pretraining_tsv.py  pretraining.py  pretraining_csv.py  pretraining_tsv.py  pyproject.toml  relation_mapping.json  requirements.txt  train_set.py  tsne_plot_embedding.py  umap_plot_embedding.py
GNN/: EncoderDecoder.py
GNN/BERT/: bert.py  bert_csv.py
GNN/data/: JekyllHyde_ns.csv  MobyDick_ns.csv  TheVerdict_ns.csv
GNN/pretraining/: NegativeSampling.py  NegativeSampling_csv.py  early_stopping.py  optimizer.py  train_loop.py  trainer.py
Inference/: Test.csv  book_embedder.py  compute_similarity.py  latent_space_visualization.py  saveplot.py  similarity_analyzer.py  similarity_heatmap.py
Inference/csv/: Test.csv  Total.csv  Train.csv
JekyllHyde_sub_grafi/: chunk_12.json  chunk_14.json  chunk_2.json  chunk_4.json  chunk_8.json  chunk_9.json
KG_Extraction/: books.py  exporter.py  extractor.py  interactive_visualizer.py  macro.py  merger.py  micro.py  pipeline.py  viz_graph.py
KG_Statistics/: dashboard_visualizer.py  graph_analyzer.py  main.py
MobyDick_sub_grafi/: chunk_1.json  chunk_10.json  chunk_11.json  chunk_13.json  chunk_14.json  chunk_19.json  chunk_2.json  chunk_20.json  chunk_21.json  chunk_24.json  chunk_26.json  chunk_27.json  chunk_29.json  chunk_3.json  chunk_35.json  chunk_38.json  chunk_39.json  chunk_40.json  chunk_6.json  mobydick.html  mobydick_kge.tsv
TheVerdict_sub_grafi/: chunk_2.json
TrainedModel/: final_node_embeddings.pt  final_rel_embeddings.pt  node_mapping.json  relation_mapping.json
app/: app.py  metadata_fetcher.py  similarity_service.py
app/static/: style.css
app/templates/: index.html
bk_TrainedModel/: final_node_embeddings.pt  final_rel_embeddings.pt  narrative_kg_model_weights.pt  node_mapping.json  relation_mapping.json
book/: DrJekyllAndMrHyde.txt  book_downloader.py  get_txt.py
book/1984/: 1984.tsv  chunk_1.json  chunk_10.json  chunk_11.json  chunk_12.json  chunk_13.json  chunk_14.json  chunk_15.json  chunk_16.json  chunk_17.json  chunk_18.json  chunk_19.json  chunk_2.json  chunk_20.json  chunk_21.json  chunk_23.json  chunk_24.json  chunk_26.json  chunk_27.json  chunk_28.json  chunk_29.json  chunk_3.json  chunk_30.json  chunk_31.json  chunk_32.json  chunk_33.json  chunk_34.json  chunk_35.json  chunk_36.json  chunk_37.json  chunk_38.json  chunk_39.json  chunk_4.json  chunk_40.json  chunk_41.json  chunk_42.json  chunk_43.json  (+21 more)
code_examples/: Node2Vec.py
model/: export.py  macro.py  micro.py  prompt.txt  viz_graph.py
onthology/: onthology.py
(+405 files in other folders)
